# mongo-scout

./: .env.example  .gitignore  HACKATHON.md  LICENSE  README.md  SUBMISSION.md  pyproject.toml
demo/: README.md  agent_loop_demo.py  agent_loop_transcript.txt  boot_mongod.mjs  package-lock.json  package.json  run.mjs  seed.mjs  transcript.txt
demo/media/: demo.cast
demo/record/: make_video.sh  play.sh
demo/site/: README.md  index.html
src/mongo_scout/: __init__.py  agent.py  cli.py  config.py
tests/: test_agent.py  test_config.py  test_e2e_agent.py
