[project]
name = "mongo-scout"
version = "0.1.0"
description = "A Gemini + ADK agent that triages a MongoDB deployment in natural language via the MongoDB MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "kite-builds" }]
dependencies = [
    "google-adk>=2.1.0",
    "mcp>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mongo-scout = "mongo_scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mongo_scout"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
